fixed CSS issues with Safari rendering text and top nav too large

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,23 +21,25 @@ li {
 
 /*** MAIN NAV ***/
 #navi {
-  max-height: 80px;
+  max-height: 80px !important;
   width: 100%;
   background: #151a40;
-  padding-top: 1%;
+  padding-top: 1% !important;
   position: relative;
+  -webkit-font-smoothing: antialiased;
   z-index: 100;
 }
 #navi img {
-  max-width: 60px;
-  max-height: 60px;
+  max-width: 60px !important;
+  max-height: 60px !important;
   margin: 0 0 3% 0;
 }
 #navi ul {
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 1rem;
+  font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
+  font-weight: lighter;
+  font-size: 1em !important;
   list-style: none;
-  margin-top: 2em;
+  margin-top: 2em !important;
 }
 #navi ul li {
   display: inline;
@@ -46,7 +48,7 @@ li {
 #navi ul li a {
   display: inline;
   text-decoration: none;
-  padding: 1em 1em 1em 1em;
+  padding: 1em 1em 1em 1em !important;
   color: #ecf0f1;
   text-align: center;
 }
@@ -69,7 +71,7 @@ li {
 .top-bar li {
 }
 .top-bar a {
-  padding: 20px 0;
+  padding: 1em 0 0 0;
   text-decoration: none;
   display: block;
 }
@@ -100,24 +102,25 @@ li {
   position: relative;
   line-height: normal;
   font-family: "Palatino Linotype", Palatino, serif;
-  padding: 2rem 4rem 2rem 4rem;
-  margin: 2rem 10rem 2rem 10rem;
+  padding: 2em 4em 2em 4em !important;
+  margin: 2em 10em 2em 10em !important;
   z-index: 1;
   text-align: center;
   background: rgba(175, 181, 203, 0.7);
   color: #000000;
+  -webkit-font-smoothing: antialiased;
 }
 #main h1 {
-  font-size: 4rem;
+  font-size: 4em !important;
 }
 #main h3 {
-  font-size: 2.3rem;
+  font-size: 2.3em !important;
 }
 #main h6 {
-  font-size: 1.5rem;
+  font-size: 1.5em !important;
 }
 #main h3 a {
-  border-bottom: .1rem dotted;
+  border-bottom: .1rem dotted !important;
   font-family: "Palatino Linotype", Palatino, serif;
   color: #000000;
 }
@@ -170,6 +173,8 @@ li {
 
 /*** SUB NAV ***/
 #side {
+  font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
+  font-weight: 200;
   position: fixed;
   background: #ecf0f1;
   top: 0;
